add of user-profile component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <sign-up></sign-up>
+  <user-profile></user-profile>
 </div>
