--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <user-profile></user-profile>
+  <app-movie-card></app-movie-card>
 </div>
