--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -8,3 +8,16 @@ div {
     box-shadow: 5px 5px 3px gray;
     padding: 1rem;
 }
+
+.ng-valid[required], .ng-valid.required  {
+    border-left: 5px solid #42A948; /* green */
+  }
+  
+  .ng-invalid:not(form)  {
+    border-left: 5px solid #a94442; /* red */
+  }
+
+  div.errors {
+      background-color: #fc3f3b;
+      font-size: 1.5rem;
+  }
