add of files for the Angular quest 08

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<menu></menu>
-<router-outlet></router-outlet>
+<div class="container" style="text-align:center">
+    <menu></menu>
+    <router-outlet></router-outlet>
+    <app-developer></app-developer>
+</div>
