add solution for angular quest 07

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
     <menu></menu>
     <router-outlet></router-outlet>
     <app-developer></app-developer>
+    <app-search-movie></app-search-movie>
 </div>
