add files for solution of Angular quest 10

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
     <router-outlet></router-outlet>
     <app-developer></app-developer>
     <app-search-movie></app-search-movie>
+    <app-cocktail-list></app-cocktail-list>
 </div>
