--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container" style="text-align:center">
-    <menu></menu>
+    <!-- <menu></menu>
     <router-outlet></router-outlet>
     <app-developer></app-developer>
-    <app-search-movie></app-search-movie>
+    <app-search-movie></app-search-movie> -->
     <app-cocktail-list></app-cocktail-list>
 </div>
