add of the NasaService and modifications to solve the angular quest 12

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,8 @@
     <router-outlet></router-outlet>
     <app-developer></app-developer>
     <app-search-movie></app-search-movie> -->
-    <app-cocktail-list></app-cocktail-list>
+    <!-- <app-cocktail-list></app-cocktail-list> -->
+    <!-- <app-yoda></app-yoda> -->
+    <p>This is the image of the day from the NASA API</p>
+    <img [src]="imgOfTheDay" />
 </div>
